VSMT_SETCHKS_APP/deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE_TO_BE_REPLACED
  labels:
    ttl: forever
