VSMT_SETCHKS_APP/deployment/k8s/vsmt_setchks_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: NAMESPACE_TO_BE_REPLACED
  name: DEPLOYMENT_NAME_TO_BE_REPLACED
spec:
  replicas: 1
  selector:
    matchLabels:
      app: DEPLOYMENT_NAME_TO_BE_REPLACED
  template:
    metadata:
      labels:
        app: DEPLOYMENT_NAME_TO_BE_REPLACED
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: CONTAINER_NAME_TO_BE_REPLACED
          image: IMAGE_NAME_TO_BE_REPLACED
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 10m
              memory: 6000Mi
            limits:
              cpu: 500m
              memory: 8000Mi
      serviceAccount: ddc-vsmt-setchks-app
      serviceAccountName: ddc-vsmt-setchks-app
