VSMT_SETCHKS_APP/deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ALB_INGRESS_TO_BE_REPLACED
  namespace: NAMESPACE_TO_BE_REPLACED
  labels:
    app: ALB_INGRESS_TO_BE_REPLACED
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: ALB_SCHEME_TO_BE_REPLACED
    #alb.ingress.kubernetes.io/security-groups: sg-0367ad4ca3c84006f # not needed if internal
    # alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/ssl-policy: SECURITY_POLICY_TO_BE_REPLACED #ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/tags: |
      Service=SERVICE_TAG_TO_BE_REPLACED

    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    # presence of certificate implies HTTPS
    alb.ingress.kubernetes.io/certificate-arn: CERT_ARN_TO_BE_REPLACED

    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /healthy
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'

    # Hack to enable verification that kubectl apply has completed
    last-updated-epochtime: 'EPOCHTIME_TO_BE_REPLACED'
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: SERVICE_NAME_TO_BE_REPLACED
                port:
                  number: PORT_TO_BE_REPLACED
